# fact-sphere

./: .flake8  CHANGELOG.md  README.md  noxfile.py  pyproject.toml  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.md  index.rst  make.bat
src/fact_sphere/: __about__.py  __init__.py  api.py  models.py  types.py
src/fact_sphere/facts/: __init__.py  facts.json
src/fact_sphere/facts/audio/: nearly_true_01.flac  nearly_true_02.flac  nearly_true_03.flac  nearly_true_04.flac  nearly_true_05.flac  nearly_true_06.flac  nearly_true_07.flac  nearly_true_08.flac  nearly_true_09.flac
tests/: test_api.py  test_models.py
tests/files/: fact.json
