[build-system]
requires = [ "poetry>=1.0.0" ]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "fact-sphere"
description = "A library for Portal 2 Fact Sphere facts."
version = "1.0.0"

license = "MIT"

authors = ["thebigmunch <mail@thebigmunch.me>"]

readme = "README.md"

repository = "https://github.com/thebigmunch/fact-sphere"
homepage = "https://github.com/thebigmunch/fact-sphere"

[tool.poetry.dependencies]
python = "^3.6"

attrs = ">=18.2,<19.4"

coverage = { version = ">=5.0,<6.0", optional = true, extras = [ "toml" ] }
flake8 = { version = "^3.5", optional = true }
flake8-builtins = { version = "^1.0", optional = true }
flake8-comprehensions = { version = ">=2.0,<=4.0", optional = true }
flake8-import-order = { version = "^0.18", optional = true }
flake8-import-order-tbm = { version = "^1.0", optional = true }
nox = { version = "^2019", optional = true }
sphinx = { version = "^2.0", optional = true}
sphinx-material = { version = "0.*", optional = true }
ward = { git = "https://github.com/thebigmunch/ward.git", branch = "tags" }

[tool.poetry.extras]
dev = [
	"coverage",
	"flake8",
	"flake8-builtins",
	"flake8-comprehensions",
	"flake8-import-order",
	"flake8-import-order-tbm",
	"nox",
	"sphinx",
	"sphinx-material",
	"ward",
]
doc = [
	"sphinx",
	"sphinx-material",
]
lint = [
	"flake8",
	"flake8-builtins",
	"flake8-comprehensions",
	"flake8-import-order",
	"flake8-import-order-tbm",
]
test = [
	"coverage",
	"nox",
	"ward",
]


[tool.coverage.run]
branch = true
source = [ "fact_sphere" ]
omit = [
	"**/__about__.py",
	"**/__init__.py",
	"**/types.py",
]

[tool.coverage.report]
precision = 2
show_missing = true


[tool.ward]
path = [ "tests" ]
